kubernetes-deployment/deployment-yaml/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      name: hello-app
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-container
        image: hmzanajeebkhan/helloword-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service 
metadata:
  name: hello-app-svc
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  type: NodePort
  ports:
  - nodePort: 31113
    port: 8080
    targetPort: 8080
