kubernetes-deployment/deployment-yaml/Ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"  
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.docker.hello.com
    secretName: test-production-certificate 
  rules:
  - host: test.docker.hello.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-app-svc
            port:
              number: 8080
